--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,8 +1,6 @@
 <%- contentFor('body') %>
 
-<br />
-<br />
-<div id='about-area'>
+<div class='content-area'>
   <h4 id='about-title'>Semente Urbana - Environment Scanner</h4>
   <p id='about-content'>
     Aplicação para leitura de dados climáticos em ambientes fechados
