--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,9 +6,15 @@
     <div class="form-group row">
       <label for="device" class="col-12 col-md-3 col-form-label">Dispositivo</label>
       <select class="form-control col-12 col-md-6 ml-3" id='device'>
+        <!-- Standart option -->
         <option value="">Selecione</option>
-        <option value="">Baú</option>
-        <option value="">Container</option>
+
+        <% for (var i = 0; i < devices.length; i++) {%>
+        <option value="<%= devices[i].mac %>">
+          <%= devices[i].description %>
+        </option>
+        <% } %>
+
       </select>
     </div>
     <div class="form-group row">
@@ -27,3 +33,12 @@
   </form>
 
 </div>
+
+<br>
+<br>
+
+<div class='content-area' id='chart-area'>
+  <div id="chart-container" style="height: 300px; width: 100%;"></div>
+</div>
+
+<div class='content-area' id='chart-area' style="min-width: 310px; height: 400px; margin: 0 auto"></div>
