--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -38,7 +38,5 @@
 <br>
 
 <div class='content-area' id='chart-area'>
-  <div id="chart-container" style="height: 300px; width: 100%;"></div>
+  <div id='chart-element'></div>
 </div>
-
-<div class='content-area' id='chart-area' style="min-width: 310px; height: 400px; margin: 0 auto"></div>
