--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,6 +56,16 @@ body {
   color: white;
 }
 
+#chart-area {
+  display: none;
+}
+
+#chart-element {
+  min-width: 310px;
+  height: 400px;
+  margin: 0 auto;
+}
+
 /* ABOUT PAGE */
 
 #about-title {
